Fixed clipping on process logs page by adding margin bottom to body in main.css

--- a/src/components/main.css
+++ b/src/components/main.css
@@ -15,6 +15,7 @@ body {
 body {
   margin: 1%;
   overflow-y: scroll;
+  margin-bottom: 100px;
 }
 
 .settingsFlex {
